--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,18 +12,18 @@
     </header>
     
 
-    <main>
-        <div>
-            <h1>Eleve seu negócio digital a outro nível <strong id="titleStrong">com um Front-end de qualidade!</strong></h1>
-            <p>Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em <strong> React, HTML e CSS.</strong>
+    <main class="presentation">
+        <section class="presentation__content">
+            <h1 class="presentation__content_tittle">Eleve seu negócio digital a outro nível <strong id="titleStrong">com um Front-end de qualidade!</strong></h1>
+            <p class="presentation__content__paragraph">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em <strong> React, HTML e CSS.</strong>
                  Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-                 <a href="https://www.Instagram.com/sergiolj_rs">Instagram</a>
-                 <a href="https://www.github.com/sergiolj">GitHub</a>
-        </div>
-        <div>
+                 
+                 <div class="presentation__links">
+                    <a class="presentation__links__buttons" href="https://www.Instagram.com/sergiolj_rs">Instagram</a>
+                    <a class="presentation__links__buttons" href="https://www.github.com/sergiolj">GitHub</a>
+                 </div>
+        </section>
             <img src="img/Imagem.png" alt="Fotografia do profissional com um notebook">
-        </div>
-
     </main>
 
 
