--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -14,7 +14,7 @@
 
     <main class="presentation">
         <section class="presentation__content">
-            <h1 class="presentation__content_tittle">Eleve seu negócio digital a outro nível <strong id="titleStrong">com um Front-end de qualidade!</strong></h1>
+            <h1 class="presentation__content__tittle">Eleve seu negócio digital a outro nível <strong id="titleStrong">com um Front-end de qualidade!</strong></h1>
             <p class="presentation__content__paragraph">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em <strong> React, HTML e CSS.</strong>
                  Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                  
@@ -23,7 +23,7 @@
                     <a class="presentation__links__buttons" href="https://www.github.com/sergiolj">GitHub</a>
                  </div>
         </section>
-            <img src="img/Imagem.png" alt="Fotografia do profissional com um notebook">
+            <img class="Imagem" src="img/Imagem.png" alt="Fotografia do profissional com um notebook">
     </main>
 
 
